package behavioral.observer.game;

public interface PlayerDataListener {
    void listen(PlayerData p);
}
