@startuml
'https://plantuml.com/class-diagram

interface PlayerDataListener {
    void listen(PlayerData p)
}
class PlayerData {
    - int thoiGian
    - int countdown
    - int grade
    + void setDashboard()
}
class Dashboard {

}

PlayerDataListener <|.. Dashboard
PlayerData --> PlayerDataListener: dashboard
PlayerData <-- Dashboard: playerData


@enduml